<resources>
    <string name="app_name">Login Sqlite</string>
    <string name="hello_world">Hello World</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="your_don_t_have_an_account">Your don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_have_an_account">Your have an account?</string>
    <string name="edit">Edit</string>
    <string name="edit_user">Edit User</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>