<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:includeFontPadding="false"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:includeFontPadding="false"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="text"
        android:textCursorDrawable="@drawable/background_btn"
        android:hint="@string/user_name"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:includeFontPadding="false"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/background_btn"
        android:hint="@string/email"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/inputUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:includeFontPadding="false"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/background_btn"
        android:hint="@string/password"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:includeFontPadding="false"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/background_btn"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="@color/colorAccent"
        app:cornerRadius="@dimen/_10sdp"
        android:text="@string/register"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/your_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>