<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_8sdp"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:elevation="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/textUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/user_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:includeFontPadding="false"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="@dimen/_8sdp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="@dimen/_8sdp"
                    android:text="@string/delete"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>